--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 body {
-    background-color: #939393;
+    background-color: #343434;
+}
+#book-holder {
+    margin: 0%;
+   display: flex;
+   justify-content: space-between;
+}
+#the-books {
+    margin-bottom: 30px;
+    background-color: rgb(158, 151, 151);
 }
